# Gc-KIT-Bus

./: .gitignore  .pdm-python  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  vercel.json
.claude/: settings.local.json
backend/: .env.example  Dockerfile  bus_reservation.db  init_demo_data.py  main.py  requirements.txt
backend/app/: init_db.py
backend/app/api/: admin.py  auth.py  buses.py  reservations.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  bus.py  reservation.py  user.py
backend/app/schemas/: __init__.py  bus.py  reservation.py  user.py
frontend/: next.config.js  package.json  tailwind.config.js
frontend/.claude/: settings.local.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/buses/: page.tsx
frontend/src/app/admin/reservations/: page.tsx
frontend/src/app/admin/routes/: page.tsx
frontend/src/app/admin/stats/: page.tsx
frontend/src/app/admin/users/: page.tsx
frontend/src/app/driver/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/user/: page.tsx
frontend/src/app/user/reservations/: page.tsx
frontend/src/components/: BusSeatLayout.tsx  DashboardLayout.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  SeatIcon.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/utils/: busSeats.ts
